--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "webpack base setup",
   "main": "index.js",
+  "author": "Kevin Saanen",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "webpack-dev-server -d --watch --config webpack.config.js",
@@ -29,6 +31,7 @@
     "awesome-typescript-loader": "4.0.1",
     "angular2-template-loader": "0.6.2",
     "bootstrap": "4.0.0",
+    "codelyzer": "4.2.1",
     "css-loader": "0.28.10",
     "eslint": "4.18.2",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
@@ -47,8 +50,6 @@
     "webpack-cli": "2.0.10",
     "webpack-dev-server": "3.1.1"
   },
-  "author": "Kevin Saanen",
-  "license": "MIT",
   "dependencies": {
     "@angular/animations": "5.2.9",
     "@angular/common": "5.2.9",
@@ -59,8 +60,8 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/router": "5.2.9",
-    "core-js": "2.5.4",
     "rxjs": "5.5.8",
+    "ts-helpers": "1.1.2",
     "zone.js": "0.8.25"
   }
 }
