--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,20 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
-    "types": [
-      // add node as an option
-      "node"
-    ],
+    "noEmitOnError": true,
+    "noImplicitAny": false,
+    "mapRoot": "./",
+    "target": "es5",
+    "lib": ["es6", "dom"],
     "typeRoots": [
       "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
