--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/bootstrap": "4.0.0",
+    "@types/core-js": "0.9.46",
     "@types/node": "9.6.2",
     "awesome-typescript-loader": "4.0.1",
     "angular2-template-loader": "0.6.2",
@@ -36,6 +37,7 @@
     "eslint": "4.18.2",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
     "html-webpack-plugin": "3.2.0",
+    "html-loader": "0.5.5",
     "node-sass": "4.7.2",
     "sass-loader": "6.0.7",
     "script-loader": "0.7.2",
@@ -60,6 +62,7 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/router": "5.2.9",
+    "core-js": "2.5.4",
     "rxjs": "5.5.8",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.25"
