--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,25 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noEmitOnError": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "mapRoot": "./",
     "target": "es5",
     "lib": ["es6", "dom"],
+    "types": [
+      // add node as an option
+      "node"
+   ],
     "typeRoots": [
       "node_modules/@types"
     ]
   },
+  "compileOnSave": false,
+  "buildOnSave": false,
   "exclude": [
     "node_modules"
   ]
