--- a/package.json
+++ b/package.json
@@ -23,33 +23,32 @@
     "bootstrap"
   ],
   "devDependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/bootstrap": "4.0.0",
+    "@angular/cli": "1.7.4",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/language-service": "5.2.9",
+    "@types/bootstrap": "4.0.1",
     "@types/core-js": "0.9.46",
     "@types/node": "9.6.2",
-    "awesome-typescript-loader": "4.0.1",
     "angular2-template-loader": "0.6.2",
     "bootstrap": "4.0.0",
     "codelyzer": "4.2.1",
-    "css-loader": "0.28.10",
-    "eslint": "4.18.2",
+    "css-loader": "0.28.11",
+    "eslint": "4.19.1",
     "extract-text-webpack-plugin": "v4.0.0-alpha.0",
     "html-webpack-plugin": "3.2.0",
     "html-loader": "0.5.5",
-    "node-sass": "4.7.2",
+    "node-sass": "4.8.3",
     "sass-loader": "6.0.7",
     "script-loader": "0.7.2",
     "style-loader": "0.20.3",
     "tapable": "1.0.0",
-    "ts-loader": "4.0.1",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2",
+    "ts-loader": "4.1.0",
+    "ts-node": "5.0.1",
+    "tslint": "5.9.1",
+    "typescript": "2.8.1",
     "rimraf": "2.6.2",
     "webpack": "4.1.1",
-    "webpack-cli": "2.0.10",
+    "webpack-cli": "2.0.14",
     "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
